tests/baselines/reference/internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError.errors.txt
internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError.ts(1,1): error TS1185: Merge conflict marker encountered.
internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError.ts(4,1): error TS1185: Merge conflict marker encountered.
internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError.ts(7,1): error TS1185: Merge conflict marker encountered.
internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError.ts(10,1): error TS1185: Merge conflict marker encountered.
internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError.ts(24,17): error TS2694: Namespace '"internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError".c' has no exported member 'b'.


==== internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError.ts (5 errors) ====
    <<<<<<< HEAD
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
    export module a {
        export module b {
    ||||||| parent of 42f6576e83 (Deprecate `--module amd`, `umd`, `system`, `none`; `--moduleResolution classic`; change defaults (#62669))
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
    export namespace a {
        export namespace b {
    =======
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
    export namespace a {
        export namespace b {
    >>>>>>> 42f6576e83 (Deprecate `--module amd`, `umd`, `system`, `none`; `--moduleResolution classic`; change defaults (#62669))
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
            export interface I {
                foo();
            }
        }
    }
    
    export module c {
        import b = a.b;
        export var x: b.I;
        x.foo();
    }
    
    
    export var z: c.b.I;
                    ~
!!! error TS2694: Namespace '"internalAliasUninitializedModuleInsideLocalModuleWithoutExportAccessError".c' has no exported member 'b'.